--- a/Case Drug Regimen/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Case Drug Regimen/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Observations and Insights \n",
+    "# Observations and Insights \n",
+    "1. The bar graph showed the Drug Regimen Capomulin had the maximum number (230) of mice that was treated with it,\n",
+    "followed by Ramicane which had (228) mice treated with it.\n",
+    "The drug which had the least (148) mice that was treated with was Propriva.\n",
     "\n",
-    "1. The bar graph showed the Drug Regimen Capomulin has the maximum mice number (230), \n",
-    "and Zoniferol has the smaller mice number (182).By removing duplicates the total number of mice is 248. \n",
+    "2.The total number of mice is 249 but the mouse with mouseID g989 was duplicated  which gave a unique count of 248.\n",
     "The total count of mice by gender also showed that 124 female mice and 125 male mice.\n",
     "\n",
-    "2. The correlation between mouse weight, and average tumor volume is 0.84. It is a strong positive correlation,\n",
+    "3.The correlation between mouse weight, and average tumor volume is 0.84. It is a strong positive correlation,\n",
     "when the mouse weight increases the average tumor volume also increases.\n",
     "\n",
-    "3. The regression analysis helped us to understand how much the average tumor volume (dependent variable)\n",
+    "4. The regression analysis helped us to understand how much the average tumor volume (dependent variable)\n",
     "will change when weight of mice change(independent variables). \n",
     "The R-squared value is 0.70, which means 70% the model fit the data, which is fairely good to predict the data from the model.\n",
     "Higher R-squared values represent smaller differences between the observed data, and the fitted value. \n",
     "70% the model explains all of the variation in the response variable around its mean.\n",
     "\n",
-    "4. From the selected treatments Capomulin and Ramicane reduces the size of tumors better.\n"
+    "\n"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +143,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 381,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
        "249"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +207,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +330,7 @@
        "917           54.657650                 1  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +534,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +556,7 @@
        "248"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +670,7 @@
        "Naftisol      54.33   52.51     66.17                8.13  0.60"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +790,7 @@
        "Naftisol      54.33   52.51     66.17                8.13  0.60"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,28 +807,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>var</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>50.446266</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "      <td>0.544332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Mean                  50.976\n",
-       "Median                49.903\n",
-       "Variance              47.858\n",
-       "Standard Deviation     6.821\n",
-       "SEM                    0.502\n",
-       "dtype: float64"
+       "                   mean     median        var       std       sem\n",
+       "Drug Regimen                                                     \n",
+       "Capomulin     40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin      52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol     52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril      55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol      54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo       54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva      52.320930  50.446266  43.852013  6.622085  0.544332\n",
+       "Ramicane      40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn      54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using the aggregation method, produce the same summary statistics in a single line\n",
-    "summary_df_agg.agg('mean', axis='rows')"
+    "summary_df_agg = clean_data.groupby([\"Drug Regimen\"])[\"Tumor Volume (mm3)\"].agg(['mean', 'median', 'var', 'std', 'sem'])\n",
+    "summary_df_agg\n",
+    "#summary_df_agg.agg('mean', axis='rows')"
    ]
   },
   {
@@ -838,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +986,7 @@
        "Name: Drug Regimen, dtype: int64"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +1008,7 @@
        " <a list of 10 Text major ticklabel objects>)"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +1049,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -959,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1344,7 @@
        "[248 rows x 8 columns]"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1350,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1418,14 +1547,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The r-squared is: 0.7088568047708717\n"
+      "The r-squared is: 0.7088568047708717\n",
+      "The correlation coefficient between mouse weight and average tumor volume is 0.84\n"
      ]
     },
     {
@@ -1454,6 +1584,14 @@
     "plt.ylabel(\"Tumor Volume (mm3)\")\n",
     "plt.title(\"Weight vs Tumor Volume for Capomulin\")\n",
     "print(f\"The r-squared is: {rvalue**2}\")\n",
+    "\n",
+    "cap_average_weight = capomulin_mean[\"Weight (g)\"]\n",
+    "cap_average_volume = capomulin_mean[\"Tumor Volume (mm3)\"]\n",
+    "print(f\"The correlation coefficient between mouse weight and average tumor volume is {round(st.pearsonr(cap_average_weight,cap_average_volume, )[0],2)}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "plt.show()"
    ]
